--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -113,44 +113,76 @@ input:focus, select:focus {
   outline: none;
   box-shadow: 0 0 5px green;
 }
+/*buttons*/
+#addPostForm button, #addCatForm button, #CATEGORIES button,#registration-form button, #login-form button{
+  width: 100%;
+  padding: 8px;
+  font-size: 15px;
+  background-color: #FFFF66;
+  color: #000000;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+h5{
+  text-align: center;
+  font-size: large;
+}
 /* Cards */
 .card {
   border: 1px solid #ddd;
-  border-radius: 10px;
+  border-radius: 8px;
   overflow: hidden;
   background: white;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px #000000;
   display: flex;
   flex-direction: column;
-  transition: transform 0.3s;
+}
+.card-image {
+  position:relative;
 }
 
+.card-image img {
+  max-width: 100%;
+  height: auto;
+}
+.card-image label {
+  display: block;
+  margin-top: 10px;
+  cursor: pointer;
+}
 .card:hover {
   transform: translateY(-5px);
 }
 
 .card-header {
-  padding: 20px;
+  padding: 12px 12px 8px 12px;
   background: #ffcc00;
   color: #333;
+}
+.card-header h2 {
+  margin: 0;
+  font-size: 1.5rem;
+  color: #000000;
 }
 
 .card-content {
   padding: 16px;
-  flex-grow: 1;
+  margin: 0;
+  color: #000000;
+  line-height: 1.4;
 }
 
 .card-footer {
   padding: 16px;
   border-top: 1px solid #eee;
-  text-align: center;
 }
 
 .price {
   margin: 0;
   font-size: 1.3rem;
   font-weight: bold;
-  color: #2c5282;
+  color: #000000;
 }
 
 .postsContainer {
@@ -161,8 +193,12 @@ input:focus, select:focus {
   max-width: 1200px;
   margin: 0 auto;
 }
-
-/* Favorite button */
+.card-controls{
+  display: flex;
+  justify-content: end;
+  border-top: 1px solid #eee;
+}
+/* Favorite btn */
 .favorite-btn.favorited {
   background-color: #ff4d4d;
   color: white;
